<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="org.pptik.radiostreaming.activity.PodcastActivity">

    <RelativeLayout
        android:id="@+id/PodcastTitle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#ffffff" >

        <Button
            android:id="@+id/PodcastActivityBack"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/pull_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_activity_podcast"
            android:textColor="#00CED1"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_station"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
        android:gravity="center"
        android:textColor="#00CED1"/>

    <Spinner
        android:id="@+id/id_list_stasiun_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="5">

        <EditText
            android:id="@+id/tanggal_radio"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:hint="@string/date"
            android:contentDescription="@string/date"
            android:visibility="visible"/>

        <ImageButton
            android:id="@+id/id_select_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:src="@drawable/ic_agenda" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
    </ListView>

</LinearLayout>
